# fastapi-postgresql-lms

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/data/: students.json
alembic/versions/: 042cf393ed27_.py  2187ba8166d3_.py
api/: users.py
db/: setup.py
db/models/: course.py  mixins.py  user.py
routers/: courses.py  users.py
schemas/: course.py  user.py
services/: course.py  user.py
