[tool.poetry]
name = "fastapi-postgresql-lms"
version = "0.1.0"
description = "LMS using fastapi"
authors = ["Francisco Pantoja <franciscopantojag98@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastapi_postgresql_lms"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
pydantic = "^1.10.7"
sqlalchemy = "^2.0.11"
psycopg2-binary = "^2.9.6"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.10.4"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
